Bug 404321 - Zooming icon dont change after zoom gesture on OSX
Summary: Zooming icon dont change after zoom gesture on OSX
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.1.7
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-14 07:25 UTC by sashikknox
Modified: 2019-06-02 10:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sashikknox 2019-02-14 07:25:51 UTC
SUMMARY
Wrong cursor icon, after use zoom touchpad gesture on MacBook (two fingers pinch gesture). After first zooming, icon is changed to "magnifier" icon, after that, the icon remains the same until you close the application. This does not affect the health of the application.

STEPS TO REPRODUCE
1. create new project (or open some project)
2. zoom picture, using zoom gesture on touchpad

OBSERVED RESULT
 the cursor icon does not display the currently selected tool, the cursor icon shows is "scaling tool"

EXPECTED RESULT
after scaling, the cursor icon should display the currently selected tool (like pen, brush, or something)


SOFTWARE/OS VERSIONS
MacOS: Mojave 10.14

ADDITIONAL INFORMATION
link to gif with video of bug
https://drive.google.com/file/d/1d-VhCF8FTFFsvkPhyJ-Z_aX7WRAhnq2a/view?usp=sharing
Comment 1 vanyossi 2019-03-14 02:41:10 UTC
I can confirm this bug on latest master 5c0ca4e. it only occurs when zooming with the touch pad. 

It seems to be an event signal is mixed up as rotating and zooming repeatedly with the touchpad will make the cursor get back to normal eventually.

WORKAROUND: use keboard gesture to zoom in/out [Alt + spacebar + cursor drag]
Comment 2 Halla Rempt 2019-04-30 10:57:39 UTC
Isn't this fixed by now? It sounds like the other macOS cursor problems that were resolved.
Comment 3 vanyossi 2019-05-02 04:43:16 UTC
No, it's not fixed. We fixed all tablet bugs, but touchpad events are not affected. So the cursor gets stuck.

Zoom cursor is the most prevalent.
Rotation cursor can get stuck, but since panning restores painting cursor, and rotating without panning is quite dificult, it almost never gets stuck in this one.
Comment 4 Bug Janitor Service 2019-05-17 04:33:08 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 sashikknox 2019-05-17 07:26:36 UTC
Why this bug report needs info? Few people already confirmed this bug, what info you need for this bug?
P.S. maybe later, i will try build it myself, and view how work gestures.
Comment 6 vanyossi 2019-05-18 17:20:19 UTC
I guess I did not change the status to confirmed back then?

confirming and assigning.
Comment 7 vanyossi 2019-05-28 04:57:35 UTC
Git commit 4b507bf9183c27bc087a959aa9ae3338a6b33b8a by Ivan Yossi.
Committed on 28/05/2019 at 04:55.
Pushed by ivany into branch 'master'.

Fix macOS zoom and rotate icon getting stuck
BACKPORT:krita/4.2

M  +3    -6    libs/ui/input/kis_shortcut_matcher.cpp

https://invent.kde.org/kde/krita/commit/4b507bf9183c27bc087a959aa9ae3338a6b33b8a
Comment 8 Halla Rempt 2019-06-02 10:08:00 UTC
Git commit 6e47e23967e7671832e257ae9a9abd68fd46b5a7 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 02/06/2019 at 09:37.
Pushed by rempt into branch 'krita/4.2'.

Fix macOS zoom and rotate icon getting stuck
BACKPORT:krita/4.2
(cherry picked from commit 4b507bf9183c27bc087a959aa9ae3338a6b33b8a)

M  +3    -6    libs/ui/input/kis_shortcut_matcher.cpp

https://invent.kde.org/kde/krita/commit/6e47e23967e7671832e257ae9a9abd68fd46b5a7