Fix macOS zoom and rotate icon getting stuck

BUG:404321
BACKPORT:krita/4.2
(cherry picked from commit 4b507bf9183c27bc087a959aa9ae3338a6b33b8a)